Add IDE helper and update dev tools in composer.json
Added barryvdh/laravel-ide-helper to require-dev for improved IDE support. Registered src/helpers.php for autoload-dev and updated test scripts to include phpstan and pint checks.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "3.x-dev",
         "laravel/pail": "^1.2.2",
@@ -31,7 +32,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
@@ -55,6 +59,8 @@
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
         "test": [
+            "./vendor/bin/phpstan",
+            "./vendor/bin/pint --test",
             "@php artisan config:clear --ansi",
             "@php artisan test"
         ]
