--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "dominominal-desktop"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Dominominal's desktop wrapper"
+authors = ["lea-reift"]
 license = ""
 repository = ""
-edition = "2021"
+edition = "2025"
 rust-version = "1.77.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
