--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@tauri-apps/api": "^2.6.0",
+        "install": "^0.13.0",
+        "npm": "^10.9.3"
     }
 }
