--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "@tauri-apps/api": "^2.6.0",
-        "install": "^0.13.0",
-        "npm": "^10.9.3"
+        "@tauri-apps/api": "^2.6.0"
     }
 }
