Update code validators

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,9 @@ includes:
     - vendor/nesbot/carbon/extension.neon
 
 parameters:
+    ignoreErrors:
+        - '~Parameter #\d+ \$callback of method Illuminate\\Support\\Collection<.*>::[a-zA-Z0-9_]+\(\) expects .*, Closure\(.*\): .* given~'
+        
 
     paths:
         - src
