--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dominominal-desktop"
-version = "0.1.0"
+version = "0.1.1"
 description = "Dominominal's desktop wrapper"
 authors = ["lea-reift"]
 license = ""
@@ -25,6 +25,7 @@ tauri = { version = "2.6.2", features = [] }
 tauri-plugin-log = "2"
 sysinfo = "0.36.0"
 tauri-plugin-shell = "2"
+tauri-plugin-dialog = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
