--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ tauri-plugin-log = "2"
 sysinfo = "0.36.0"
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
+sqlite = "0.37.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
