--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,8 @@ sysinfo = "0.36.0"
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 sqlite = "0.37.0"
+reqwest = "0.12"
+tokio = { version = "1", features = ["time"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
