--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,7 @@ sysinfo = "0.36.0"
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 sqlite = "0.37.0"
-reqwest = { version = "0.12", features = ["cookies"] }
+reqwest = "0.12"
 tokio = { version = "1", features = ["time"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
