--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ tauri-plugin-dialog = "2"
 sqlite = "0.37.0"
 reqwest = "0.12"
 tokio = { version = "1", features = ["time"] }
+ctrlc = "3.4"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
