--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
-        "coolsam/flatpickr": "^4.1",
+        "coolsam/flatpickr": "5.0",
         "dompdf/dompdf": "^3.1",
-        "filament/filament": "3.3",
+        "filament/filament": "4.0",
         "getbrevo/brevo-php": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
@@ -20,7 +20,9 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
+        "filament/upgrade": "4.0",
         "larastan/larastan": "3.x-dev",
+        "laravel/boost": "^1.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
