--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dominominal-desktop"
-version = "0.1.16"
+version = "0.1.17"
 description = "Dominominal's desktop wrapper"
 authors = ["lea-reift"]
 license = ""
@@ -34,3 +34,6 @@ ctrlc = "3.4"
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
 tauri-plugin-updater = "2"
+
+[profile.release]
+debug = true
