--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/expression-language": "^7.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "filament/upgrade": "4.0",
