--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "roadrunner-php/laravel-bridge": "^6.0",
         "symfony/expression-language": "^7.3"
     },
     "require-dev": {
