--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "coolsam/flatpickr": "5.0",
         "dompdf/dompdf": "^3.1",
-        "filament/filament": "4.0",
+        "filament/filament": "^4.2",
         "getbrevo/brevo-php": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
