--- a/composer.json
+++ b/composer.json
@@ -6,32 +6,31 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.4",
         "barryvdh/laravel-dompdf": "^3.1",
-        "coolsam/flatpickr": "5.0",
+        "coolsam/flatpickr": "^5.0",
         "dompdf/dompdf": "^3.1",
         "filament/filament": "^4.2",
         "getbrevo/brevo-php": "^2.0",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
+        "laravel/framework": "^12.41",
+        "laravel/tinker": "^2.10",
         "maatwebsite/excel": "^3.1",
-        "roadrunner-php/laravel-bridge": "^6.0",
-        "symfony/expression-language": "^7.3"
+        "symfony/expression-language": "^8.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
-        "barryvdh/laravel-ide-helper": "^3.5",
-        "fakerphp/faker": "^1.23",
-        "filament/upgrade": "4.0",
+        "barryvdh/laravel-ide-helper": "^3.6",
+        "fakerphp/faker": "^1.24",
+        "filament/upgrade": "^4.3",
         "itsgoingd/clockwork": "^5.3",
-        "larastan/larastan": "3.x-dev",
-        "laravel/boost": "^1.0",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.41",
+        "larastan/larastan": "^3.8",
+        "laravel/boost": "^1.8",
+        "laravel/pail": "^1.2",
+        "laravel/pint": "^1.26",
+        "laravel/sail": "^1.50",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "nunomaduro/collision": "^8.8",
+        "phpunit/phpunit": "^11.5"
     },
     "autoload": {
         "psr-4": {
